# AlphaSpeech

./: README.md
AlphaSpeech_ASR/config/arch64/: CMakeLists.txt
AlphaSpeech_ASR/src/core/: crop.c  crop.h  fastmalloc.h  macros.h  mat.c  mat.h  packing.c  packing.h  padding.c  padding.h  permute.c  permute.h
AlphaSpeech_ASR/src/decoder/: asr_decoder.c  asr_decoder.h
AlphaSpeech_ASR/src/layer/: batchnorm.c  batchnorm.h  conv1d.c  conv1d.h  conv2d.c  conv2d.h  depthwise_conv1d.c  depthwise_conv1d.h  glu.c  glu.h  gru.c  gru.h  layernorm.c  layernorm.h  linear.c  linear.h  lstm.c  lstm.h  parameter.c  parameter.h  prelu.c  prelu.h  relu.c  relu.h  sigmoid.c  sigmoid.h  silu.c  silu.h  softmax.c  softmax.h  tanh.c  tanh.h
AlphaSpeech_ASR/src/utils/: ctc_endpoint.c  ctc_endpoint.h  ctc_prefix_beam_search.c  ctc_prefix_beam_search.h  ctc_prefix_beam_search_wrt_timestamp.c  ctc_prefix_beam_search_wrt_timestamp.h  fbank.c  fbank.h  fft.c  fft.h  inverse_text_normalization.c  inverse_text_normalization.h  post_processor.c  post_processor.h
AlphaSpeech_ASR/test/: README.md  asr_api_test.c  ctc_endpoint_test.c  ctc_prefix_beam_search_test.c  ctc_prefix_beam_search_wrt_timestamp_test.c  fbank_test.c  inverse_text_normalization_test.c  post_processor_test.c
wenet/examples/alphaspeech/: inference_.py
wenet/examples/alphaspeech/wenet/utils/: weight_dump.py
wenet/examples/wohospeech/: run_inference_.sh
